--- a/src/styles/HomeStyle.css
+++ b/src/styles/HomeStyle.css
@@ -1,51 +1,62 @@
-
-*{ box-sizing: border-box; }
-
-
-.banner{
-    background-image: url("../assets/Home/img-3.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% 50%;    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;  
-    height: 700px;
-    object-fit: cover;
+* {
+  box-sizing: border-box;
 }
 
-.banner > h3{
-    margin-top: 70px;
-    line-height: 1;
-    color: #E3D6D0;
-    font-weight: 500;
-    
+.banner {
+  background-image: url("../assets/Home/img-3.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  color: #e3d6d0;
+  padding: 1rem;
 }
 
-.nosotros{   
-    height: 600px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-        
-    
-}
-.nosotros_texto{
-    height: 600px;
-    width: 50%;
-    margin-top: 220px;
-    margin-left: 50px;
-    color:#201B1D;
-}
-.nosotros_imagen{    
-    margin-left: 70px;
-    background-repeat: no-repeat;
-    background-image: url("../assets/Home/img2.jpg");
-    background-position: 50% 50%;
-    height: 500px;
-    width: 50%;
+.banner > h3 {
+  margin-top: 70px;
+  line-height: 1;
+  color: #e3d6d0;
+  font-weight: 500;
 }
 
+.nosotros {
+  display: flex;
+  height: 600px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  padding: 1rem;
+  align-items: flex-start;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 2rem;
+}
+.nosotros_texto {
+  width: 100%;
+  max-width: 300px;
+  color: #201b1d;
+}
+.nosotros_texto h2 {
+  margin-top: 0;
+}
+.nosotros_imagen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-color: azure;
+  background-repeat: no-repeat;
+  background-image: url("../assets/Home/img2.jpg");
+  height: 500px;
+  width: 100%;
+  max-width: 500px;
+  background-position: 50% 50%;
+  object-fit: cover;
+  border-radius: 15px;
+}
