--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -24,6 +24,7 @@ fieldset {
   gap: 1rem;
   margin: 0.5rem 0;
   padding: 0.5rem;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
